...
import InputScreen from '@/screens/input/InputScreen'

import HomeScreen from '../screens/home'
import ChoiceScreen from '@/screens/choice'

export type HomeTabParams = {
  HomeScreen: undefined
  AccountScreen: undefined
  SupportScreen: undefined
  DetailScreen: undefined
}

export const BottomMenu = () => {
...
