...
            </Text>
          </View>
        </View>
        <View style={styles.headerFooterStyle}>
          <View style={styles.textStyle}>
            <TouchableOpacity
              testID="btnPayment"
              onPress={() => {
                // navigation.reset({
                //   index: 0,
                //   routes: [{ name: 'DetailScreen' }]
                // })
                navigation.navigate('BottomMenu', { screen: 'DetailScreen' })
...
